--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -31,12 +31,7 @@ body {
   background-color: $dark;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-family: $heading-font-family;
   line-height: initial;
   letter-spacing: 0.5px;
